notice: fix contrast issues #19

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -477,6 +477,7 @@ blockquote cite {
 div.notices {
     border-top-width: 2rem;
     border-top-style: solid;
+    color: #505050;
     margin: 2rem 0;
     padding-bottom: .1px;
     padding-left: 1rem;
@@ -485,7 +486,6 @@ div.notices {
 div.notices > * {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    color: #666;
 }
 div.notices > div.label {
     color: #fff;
@@ -500,14 +500,14 @@ div.notices > div.label:first-child:before {
 }
 div.notices.info {
     border-color: #6AB0DE;
-    background-color: #E7F2FA;
+    background-color: #E9F5FD;
 }
 div.notices.info > div.label:first-child:before {
     content: "\f05a";
 }
 div.notices.warning {
     border-color: rgba(217, 83, 79, 0.8);
-    background-color: #FAE2E2;
+    background-color: #FFEBEB;
 }
 div.notices.warning > div.label:first-child:before {
     content: "\f071";
